deployments-1/apps/demo/be-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel
spec:
  template:
    spec:
      nodeSelector:
        alpha.eksctl.io/nodegroup-name: test-eks-prod-mng-pvt03
