deployments-1/apps/demo/fe-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fume-http-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    # nginx.ingress.kubernetes.io/whitelist-source-range: "3.19.20.124/32, 204.27.197.0/24"
spec:
  rules:
  - host: demo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fume
            port:
              name: http-fume
